# back-api-rest/openapi.yaml
@@ -1842,6 +1842,44 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorDto"
 
+  "/video-category/group-by-year":
+    get:
+      tags:
+        - video-category-controller
+      summary: Returns all the video categories group by year
+      operationId: getAllVideoCategoriesGroupByYear
+      parameters:
+        - name: onlyPublic
+          in: query
+          description: Filtrar las publicadas o todas
+          required: false
+          example: false
+          schema:
+            type: boolean
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/VideoCategoryGroupByYearResponseDto"
+        '204':
+          description: No content
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorDto"
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorDto"
+
   "/video-category/{videoCategoryId}":
     put:
       tags:
@@ -4631,6 +4669,20 @@ components:
           format: datetime
           description: 'Fecha de la galeria multimedia'
           example: '2024-10-04T14:10:59.306Z'
+
+    ######################################################################
+    VideoCategoryGroupByYearResponseDto:
+      description: Video Category data grouped by anyo
+      type: object
+      properties:
+        year:
+          type: string
+          description: 'Year'
+          example: ''
+        categories:
+          type: array
+          items:
+            $ref: '#/components/schemas/VideoCategoryResponseDto'
 
     ######################################################################
     VideoRequestDto:
